@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 0.10.0 - unreleased
 
+  MAHOUT-1635: Getting an exception when I provide classification labels manually for Naive Bayes (apalumbo)
+
   MAHOUT-1662: Potential Path bug in SequenceFileVaultIterator breaks DisplaySpectralKMeans (Shannon Quinn)
 
   MAHOUT-1656: Change SNAPSHOT version from 1.0 to 0.10.0 (smarthi)
